com.dubture.doctrine.annotation/src/com/dubture/doctrine/annotation/parser/antlr/AnnotationParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g 2012-02-26 10:38:30

package com.dubture.doctrine.annotation.parser.antlr;

import com.dubture.doctrine.annotation.parser.antlr.error.IAnnotationErrorReporter;
import com.dubture.doctrine.annotation.parser.tree.AnnotationCommonTree;



import org.antlr.runtime.*;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;



import org.antlr.runtime.tree.*;

public class AnnotationParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LOWER", "UPPER", "DIGIT", "AT", "UNDERSCORE", "BSLASH", "QUOTE", "DOUBLE_QUOTE", "ESCAPE_QUOTE", "ESCAPE_DOUBLE_QUOTE", "NEGATIVE", "DOT", "LETTER", "ALPHANUM", "IDENTIFIER_FRAG", "PARAM_START", "PARAM_END", "EQUAL", "COMMA", "CURLY_START", "CURLY_END", "TRUE", "FALSE", "NULL", "ANNOTATION", "IDENTIFIER", "STRING_LITERAL", "INTEGER_LITERAL", "FLOAT_LITERAL", "WHITESPACE", "ANNOTATION_ROOT", "ANNOTATION_VALUE", "ARGUMENT", "ARGUMENT_NAME", "ARGUMENT_VALUE", "ARRAY_VALUE", "BOOLEAN_VALUE", "CLASS", "DECLARATION", "NAMED_ARGUMENT", "NAMESPACE", "NAMESPACE_DEFAULT", "NULL_VALUE", "NUMBER_VALUE", "OBJECT_VALUE", "PAIR", "STRING_VALUE"
    };
    public static final int EOF=-1;
    public static final int LOWER=4;
    public static final int UPPER=5;
    public static final int DIGIT=6;
    public static final int AT=7;
    public static final int UNDERSCORE=8;
    public static final int BSLASH=9;
    public static final int QUOTE=10;
    public static final int DOUBLE_QUOTE=11;
    public static final int ESCAPE_QUOTE=12;
    public static final int ESCAPE_DOUBLE_QUOTE=13;
    public static final int NEGATIVE=14;
    public static final int DOT=15;
    public static final int LETTER=16;
    public static final int ALPHANUM=17;
    public static final int IDENTIFIER_FRAG=18;
    public static final int PARAM_START=19;
    public static final int PARAM_END=20;
    public static final int EQUAL=21;
    public static final int COMMA=22;
    public static final int CURLY_START=23;
    public static final int CURLY_END=24;
    public static final int TRUE=25;
    public static final int FALSE=26;
    public static final int NULL=27;
    public static final int ANNOTATION=28;
    public static final int IDENTIFIER=29;
    public static final int STRING_LITERAL=30;
    public static final int INTEGER_LITERAL=31;
    public static final int FLOAT_LITERAL=32;
    public static final int WHITESPACE=33;
    public static final int ANNOTATION_ROOT=34;
    public static final int ANNOTATION_VALUE=35;
    public static final int ARGUMENT=36;
    public static final int ARGUMENT_NAME=37;
    public static final int ARGUMENT_VALUE=38;
    public static final int ARRAY_VALUE=39;
    public static final int BOOLEAN_VALUE=40;
    public static final int CLASS=41;
    public static final int DECLARATION=42;
    public static final int NAMED_ARGUMENT=43;
    public static final int NAMESPACE=44;
    public static final int NAMESPACE_DEFAULT=45;
    public static final int NULL_VALUE=46;
    public static final int NUMBER_VALUE=47;
    public static final int OBJECT_VALUE=48;
    public static final int PAIR=49;
    public static final int STRING_VALUE=50;

    // delegates
    // delegators


        public AnnotationParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public AnnotationParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return AnnotationParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g"; }



        private IAnnotationErrorReporter errorReporter = null;

        public AnnotationParser(TokenStream input, IAnnotationErrorReporter errorReporter) {
            this(input, new RecognizerSharedState());
            this.errorReporter = errorReporter;
        }

        public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
            if (errorReporter != null) {
                String hdr = getErrorHeader(e);
                String msg = getErrorMessage(e, tokenNames);
                errorReporter.reportError(hdr,msg,e);
            }
        }

        public void setErrorReporter(IAnnotationErrorReporter errorReporter) {
            this.errorReporter = errorReporter;
        }

        protected Object recoverFromMismatchedToken(IntStream input,
                                                    int ttype, BitSet follow) throws RecognitionException
        {
            throw new MismatchedTokenException(ttype, input);
        }

        public Object recoverFromMismatchedSet(IntStream input,
                                               RecognitionException e, BitSet follow) throws RecognitionException
        {
            throw new MismatchedSetException(follow, input);
        }



    public static class annotation_return extends ParserRuleReturnScope {
        AnnotationCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "annotation"
    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:72:1: annotation : annotation_class= ANNOTATION ( declaration )? -> ^( ANNOTATION_ROOT $annotation_class ( declaration )? ) ;
    public final AnnotationParser.annotation_return annotation() throws RecognitionException {
        AnnotationParser.annotation_return retval = new AnnotationParser.annotation_return();
        retval.start = input.LT(1);

        AnnotationCommonTree root_0 = null;

        Token annotation_class=null;
        AnnotationParser.declaration_return declaration1 = null;


        AnnotationCommonTree annotation_class_tree=null;
        RewriteRuleTokenStream stream_ANNOTATION=new RewriteRuleTokenStream(adaptor,"token ANNOTATION");
        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try {
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:73:3: (annotation_class= ANNOTATION ( declaration )? -> ^( ANNOTATION_ROOT $annotation_class ( declaration )? ) )
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:73:5: annotation_class= ANNOTATION ( declaration )?
            {
            annotation_class=(Token)match(input,ANNOTATION,FOLLOW_ANNOTATION_in_annotation159);  
            stream_ANNOTATION.add(annotation_class);

            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:73:33: ( declaration )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==PARAM_START) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:73:33: declaration
                    {
                    pushFollow(FOLLOW_declaration_in_annotation161);
                    declaration1=declaration();

                    state._fsp--;

                    stream_declaration.add(declaration1.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: declaration, annotation_class
            // token labels: annotation_class
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_annotation_class=new RewriteRuleTokenStream(adaptor,"token annotation_class",annotation_class);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AnnotationCommonTree)adaptor.nil();
            // 74:7: -> ^( ANNOTATION_ROOT $annotation_class ( declaration )? )
            {
                // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:74:10: ^( ANNOTATION_ROOT $annotation_class ( declaration )? )
                {
                AnnotationCommonTree root_1 = (AnnotationCommonTree)adaptor.nil();
                root_1 = (AnnotationCommonTree)adaptor.becomeRoot((AnnotationCommonTree)adaptor.create(ANNOTATION_ROOT, "ANNOTATION_ROOT"), root_1);

                adaptor.addChild(root_1, stream_annotation_class.nextNode());
                // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:74:46: ( declaration )?
                if ( stream_declaration.hasNext() ) {
                    adaptor.addChild(root_1, stream_declaration.nextTree());

                }
                stream_declaration.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (AnnotationCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AnnotationCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "annotation"

    public static class declaration_return extends ParserRuleReturnScope {
        AnnotationCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaration"
    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:77:1: declaration : PARAM_START (statements+= statement )? ( COMMA statements+= statement )* PARAM_END -> ^( DECLARATION PARAM_START ( $statements)* PARAM_END ) ;
    public final AnnotationParser.declaration_return declaration() throws RecognitionException {
        AnnotationParser.declaration_return retval = new AnnotationParser.declaration_return();
        retval.start = input.LT(1);

        AnnotationCommonTree root_0 = null;

        Token PARAM_START2=null;
        Token COMMA3=null;
        Token PARAM_END4=null;
        List list_statements=null;
        RuleReturnScope statements = null;
        AnnotationCommonTree PARAM_START2_tree=null;
        AnnotationCommonTree COMMA3_tree=null;
        AnnotationCommonTree PARAM_END4_tree=null;
        RewriteRuleTokenStream stream_PARAM_START=new RewriteRuleTokenStream(adaptor,"token PARAM_START");
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleTokenStream stream_PARAM_END=new RewriteRuleTokenStream(adaptor,"token PARAM_END");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:78:3: ( PARAM_START (statements+= statement )? ( COMMA statements+= statement )* PARAM_END -> ^( DECLARATION PARAM_START ( $statements)* PARAM_END ) )
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:78:5: PARAM_START (statements+= statement )? ( COMMA statements+= statement )* PARAM_END
            {
            PARAM_START2=(Token)match(input,PARAM_START,FOLLOW_PARAM_START_in_declaration193);  
            stream_PARAM_START.add(PARAM_START2);

            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:78:27: (statements+= statement )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==CURLY_START||(LA2_0>=TRUE && LA2_0<=FLOAT_LITERAL)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:78:27: statements+= statement
                    {
                    pushFollow(FOLLOW_statement_in_declaration197);
                    statements=statement();

                    state._fsp--;

                    stream_statement.add(statements.getTree());
                    if (list_statements==null) list_statements=new ArrayList();
                    list_statements.add(statements.getTree());


                    }
                    break;

            }

            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:78:40: ( COMMA statements+= statement )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==COMMA) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:78:41: COMMA statements+= statement
            	    {
            	    COMMA3=(Token)match(input,COMMA,FOLLOW_COMMA_in_declaration201);  
            	    stream_COMMA.add(COMMA3);

            	    pushFollow(FOLLOW_statement_in_declaration205);
            	    statements=statement();

            	    state._fsp--;

            	    stream_statement.add(statements.getTree());
            	    if (list_statements==null) list_statements=new ArrayList();
            	    list_statements.add(statements.getTree());


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            PARAM_END4=(Token)match(input,PARAM_END,FOLLOW_PARAM_END_in_declaration209);  
            stream_PARAM_END.add(PARAM_END4);



            // AST REWRITE
            // elements: PARAM_START, PARAM_END, statements
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: statements
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_statements=new RewriteRuleSubtreeStream(adaptor,"token statements",list_statements);
            root_0 = (AnnotationCommonTree)adaptor.nil();
            // 79:7: -> ^( DECLARATION PARAM_START ( $statements)* PARAM_END )
            {
                // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:79:10: ^( DECLARATION PARAM_START ( $statements)* PARAM_END )
                {
                AnnotationCommonTree root_1 = (AnnotationCommonTree)adaptor.nil();
                root_1 = (AnnotationCommonTree)adaptor.becomeRoot((AnnotationCommonTree)adaptor.create(DECLARATION, "DECLARATION"), root_1);

                adaptor.addChild(root_1, stream_PARAM_START.nextNode());
                // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:79:36: ( $statements)*
                while ( stream_statements.hasNext() ) {
                    adaptor.addChild(root_1, stream_statements.nextTree());

                }
                stream_statements.reset();
                adaptor.addChild(root_1, stream_PARAM_END.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (AnnotationCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AnnotationCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "declaration"

    public static class statement_return extends ParserRuleReturnScope {
        AnnotationCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:82:1: statement : ( argument | namedArgument );
    public final AnnotationParser.statement_return statement() throws RecognitionException {
        AnnotationParser.statement_return retval = new AnnotationParser.statement_return();
        retval.start = input.LT(1);

        AnnotationCommonTree root_0 = null;

        AnnotationParser.argument_return argument5 = null;

        AnnotationParser.namedArgument_return namedArgument6 = null;



        try {
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:83:3: ( argument | namedArgument )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==CURLY_START||(LA4_0>=TRUE && LA4_0<=ANNOTATION)||(LA4_0>=STRING_LITERAL && LA4_0<=FLOAT_LITERAL)) ) {
                alt4=1;
            }
            else if ( (LA4_0==IDENTIFIER) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:83:5: argument
                    {
                    root_0 = (AnnotationCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_argument_in_statement242);
                    argument5=argument();

                    state._fsp--;

                    adaptor.addChild(root_0, argument5.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:83:16: namedArgument
                    {
                    root_0 = (AnnotationCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_namedArgument_in_statement246);
                    namedArgument6=namedArgument();

                    state._fsp--;

                    adaptor.addChild(root_0, namedArgument6.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (AnnotationCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AnnotationCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class argument_return extends ParserRuleReturnScope {
        AnnotationCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "argument"
    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:86:1: argument : argument_value= value -> ^( ARGUMENT $argument_value) ;
    public final AnnotationParser.argument_return argument() throws RecognitionException {
        AnnotationParser.argument_return retval = new AnnotationParser.argument_return();
        retval.start = input.LT(1);

        AnnotationCommonTree root_0 = null;

        AnnotationParser.value_return argument_value = null;


        RewriteRuleSubtreeStream stream_value=new RewriteRuleSubtreeStream(adaptor,"rule value");
        try {
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:87:3: (argument_value= value -> ^( ARGUMENT $argument_value) )
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:87:5: argument_value= value
            {
            pushFollow(FOLLOW_value_in_argument261);
            argument_value=value();

            state._fsp--;

            stream_value.add(argument_value.getTree());


            // AST REWRITE
            // elements: argument_value
            // token labels: 
            // rule labels: retval, argument_value
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_argument_value=new RewriteRuleSubtreeStream(adaptor,"rule argument_value",argument_value!=null?argument_value.tree:null);

            root_0 = (AnnotationCommonTree)adaptor.nil();
            // 88:7: -> ^( ARGUMENT $argument_value)
            {
                // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:88:10: ^( ARGUMENT $argument_value)
                {
                AnnotationCommonTree root_1 = (AnnotationCommonTree)adaptor.nil();
                root_1 = (AnnotationCommonTree)adaptor.becomeRoot((AnnotationCommonTree)adaptor.create(ARGUMENT, "ARGUMENT"), root_1);

                adaptor.addChild(root_1, stream_argument_value.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (AnnotationCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AnnotationCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "argument"

    public static class namedArgument_return extends ParserRuleReturnScope {
        AnnotationCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "namedArgument"
    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:91:1: namedArgument : name= argumentName EQUAL argument_value= argumentValue -> ^( NAMED_ARGUMENT $name $argument_value) ;
    public final AnnotationParser.namedArgument_return namedArgument() throws RecognitionException {
        AnnotationParser.namedArgument_return retval = new AnnotationParser.namedArgument_return();
        retval.start = input.LT(1);

        AnnotationCommonTree root_0 = null;

        Token EQUAL7=null;
        AnnotationParser.argumentName_return name = null;

        AnnotationParser.argumentValue_return argument_value = null;


        AnnotationCommonTree EQUAL7_tree=null;
        RewriteRuleTokenStream stream_EQUAL=new RewriteRuleTokenStream(adaptor,"token EQUAL");
        RewriteRuleSubtreeStream stream_argumentValue=new RewriteRuleSubtreeStream(adaptor,"rule argumentValue");
        RewriteRuleSubtreeStream stream_argumentName=new RewriteRuleSubtreeStream(adaptor,"rule argumentName");
        try {
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:92:3: (name= argumentName EQUAL argument_value= argumentValue -> ^( NAMED_ARGUMENT $name $argument_value) )
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:92:5: name= argumentName EQUAL argument_value= argumentValue
            {
            pushFollow(FOLLOW_argumentName_in_namedArgument291);
            name=argumentName();

            state._fsp--;

            stream_argumentName.add(name.getTree());
            EQUAL7=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_namedArgument293);  
            stream_EQUAL.add(EQUAL7);

            pushFollow(FOLLOW_argumentValue_in_namedArgument297);
            argument_value=argumentValue();

            state._fsp--;

            stream_argumentValue.add(argument_value.getTree());


            // AST REWRITE
            // elements: argument_value, name
            // token labels: 
            // rule labels: retval, name, argument_value
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name",name!=null?name.tree:null);
            RewriteRuleSubtreeStream stream_argument_value=new RewriteRuleSubtreeStream(adaptor,"rule argument_value",argument_value!=null?argument_value.tree:null);

            root_0 = (AnnotationCommonTree)adaptor.nil();
            // 93:7: -> ^( NAMED_ARGUMENT $name $argument_value)
            {
                // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:93:10: ^( NAMED_ARGUMENT $name $argument_value)
                {
                AnnotationCommonTree root_1 = (AnnotationCommonTree)adaptor.nil();
                root_1 = (AnnotationCommonTree)adaptor.becomeRoot((AnnotationCommonTree)adaptor.create(NAMED_ARGUMENT, "NAMED_ARGUMENT"), root_1);

                adaptor.addChild(root_1, stream_name.nextTree());
                adaptor.addChild(root_1, stream_argument_value.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (AnnotationCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AnnotationCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "namedArgument"

    public static class argumentName_return extends ParserRuleReturnScope {
        AnnotationCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "argumentName"
    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:96:1: argumentName : name= IDENTIFIER -> ^( ARGUMENT_NAME $name) ;
    public final AnnotationParser.argumentName_return argumentName() throws RecognitionException {
        AnnotationParser.argumentName_return retval = new AnnotationParser.argumentName_return();
        retval.start = input.LT(1);

        AnnotationCommonTree root_0 = null;

        Token name=null;

        AnnotationCommonTree name_tree=null;
        RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");

        try {
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:97:3: (name= IDENTIFIER -> ^( ARGUMENT_NAME $name) )
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:97:5: name= IDENTIFIER
            {
            name=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_argumentName330);  
            stream_IDENTIFIER.add(name);



            // AST REWRITE
            // elements: name
            // token labels: name
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AnnotationCommonTree)adaptor.nil();
            // 98:7: -> ^( ARGUMENT_NAME $name)
            {
                // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:98:10: ^( ARGUMENT_NAME $name)
                {
                AnnotationCommonTree root_1 = (AnnotationCommonTree)adaptor.nil();
                root_1 = (AnnotationCommonTree)adaptor.becomeRoot((AnnotationCommonTree)adaptor.create(ARGUMENT_NAME, "ARGUMENT_NAME"), root_1);

                adaptor.addChild(root_1, stream_name.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (AnnotationCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AnnotationCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "argumentName"

    public static class argumentValue_return extends ParserRuleReturnScope {
        AnnotationCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "argumentValue"
    // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:101:1: argumentValue : value -> ^( ARGUMENT_VALUE value ) ;
    public final AnnotationParser.argumentValue_return argumentValue() throws RecognitionException {
        AnnotationParser.argumentValue_return retval = new AnnotationParser.argumentValue_return();
        retval.start = input.LT(1);

        AnnotationCommonTree root_0 = null;

        AnnotationParser.value_return value8 = null;


        RewriteRuleSubtreeStream stream_value=new RewriteRuleSubtreeStream(adaptor,"rule value");
        try {
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:102:3: ( value -> ^( ARGUMENT_VALUE value ) )
            // C:\\Dev\\Symfony-2-Eclipse-Plugin\\com.dubture.doctrine.annotation\\Resources\\AnnotationParser.g:102:5: value
            {
